# llama3-dpo-alignment-pipeline

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  task.md
configs/: benchmark_config.yaml  dpo_config.yaml
evaluation/: benchmark.py  benchmark_report.txt
notebooks/: benchmark.ipynb
scripts/: benchmark.py  inference.py  train_dpo.py
training/: training-llama3-dpo.ipynb
